Fix overflowing images in posts.

--- a/src/wwwroot/static/styles.css
+++ b/src/wwwroot/static/styles.css
@@ -11,3 +11,7 @@ html {
     color: darkgray;
     font-size: 14px;
 }
+
+article img {
+    max-width: 100%;
+}
